화면 나오도록 1차 성공

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,23 +2,24 @@
 
 pluginGroup = com.github.timan1802.fakedatainsert
 pluginName = fakeDataInsert
-pluginRepositoryUrl = https://github.com/timan1802/fakeDataInsert
+pluginRepositoryUrl = https://github.com/JetBrains/intellij-platform-plugin-template
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.1
+pluginVersion = 1.7.3
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 242
-pluginUntilBuild = 252.*
+pluginSinceBuild = 232
+pluginUntilBuild = 251
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
-platformVersion = 2024.2.5
+# IU(Ultimate)
+platformType = IU
+platformVersion = 2025.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
 platformPlugins =
 # Example: platformBundledPlugins = com.intellij.java
-platformBundledPlugins =
+platformBundledPlugins = com.intellij.java,org.jetbrains.kotlin,org.intellij.intelliLang,com.intellij.spring,com.intellij.spring.boot,com.intellij.database
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.13
