--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -203,9 +203,9 @@ jobs:
           path: ${{ needs.build.outputs.pluginVerifierHomeDir }}/ides
           key: plugin-verifier-${{ hashFiles('build/listProductsReleases.txt') }}
 
-      # Run Verify Plugin task and IntelliJ Plugin Verifier tool
-      - name: Run Plugin Verification tasks
-        run: ./gradlew verifyPlugin -Dplugin.verifier.home.dir=${{ needs.build.outputs.pluginVerifierHomeDir }}
+      # Run Verify Plugin task and IntelliJ Plugin Verifier tool, 인텔리j 자체를 다운로드 받음. 너무 오래 걸려서 주석처리.
+#      - name: Run Plugin Verification tasks
+#        run: ./gradlew verifyPlugin -Dplugin.verifier.home.dir=${{ needs.build.outputs.pluginVerifierHomeDir }}
 
       # Collect Plugin Verifier Result
       - name: Collect Plugin Verifier Result
