--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ pluginGroup = com.github.timan1802.fakedatainsert
 pluginName = fakeDataInsert
 pluginRepositoryUrl = https://github.com/JetBrains/intellij-platform-plugin-template
 # SemVer format -> https://semver.org
-pluginVersion = 1.0.0
+pluginVersion = 1.0.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 232
@@ -19,7 +19,7 @@ platformVersion = 2025.1
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
 platformPlugins =
 # Example: platformBundledPlugins = com.intellij.java
-platformBundledPlugins = com.intellij.java,org.intellij.intelliLang,com.intellij.spring,com.intellij.spring.boot,com.intellij.database
+platformBundledPlugins = com.intellij.java,org.intellij.intelliLang,com.intellij.database
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 8.13
