--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -124,10 +124,10 @@ jobs:
           path: ${{ github.workspace }}/build/reports/tests
 
       # Upload the Kover report to CodeCov
-      - name: Upload Code Coverage Report
-        uses: codecov/codecov-action@v5
-        with:
-          files: ${{ github.workspace }}/build/reports/kover/report.xml
+#      - name: Upload Code Coverage Report
+#        uses: codecov/codecov-action@v5
+#        with:
+#          files: ${{ github.workspace }}/build/reports/kover/report.xml
 
   # Run Qodana inspections and provide report
   inspectCode:
@@ -162,10 +162,10 @@ jobs:
           java-version: 21
 
       # Run Qodana inspections
-      - name: Qodana - Code Inspection
-        uses: JetBrains/qodana-action@v2024.2
-        with:
-          cache-default-branch-only: true
+#      - name: Qodana - Code Inspection
+#        uses: JetBrains/qodana-action@v2024.2
+#        with:
+#          cache-default-branch-only: true
 
   # Run plugin structure verification along with IntelliJ Plugin Verifier
   verify:
