--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.timan1802.fakedatainsert
-pluginName = fakeDataInsert
-pluginRepositoryUrl = https://github.com/JetBrains/intellij-platform-plugin-template
+pluginName = FakeDataInsert
+pluginRepositoryUrl = https://github.com/timan1802/fakeDataInsert
 # SemVer format -> https://semver.org
 pluginVersion = 1.1.1
 
