몇몇 기기에서 우클릭 메뉴가 나타나지 않는다. 원인 불명. 메뉴는 무조건 나타나게 하고, 클릭시 경고메시지 출력하도록 수정.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -8,7 +8,11 @@
     <depends config-file="database.xml">com.intellij.database</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <!-- 기존 확장점들 -->
+        <notification.group
+                id="Database Fake Data"
+                displayType="BALLOON"
+                bundle="messages.MyBundle"
+                key="notification.group.name"/>
 
         <!-- 테이블 매핑 설정 페이지 추가 -->
         <applicationConfigurable
